force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Used to reference Opportunity Close Date</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>