force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Discard__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Discard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if Opportunity should be removed from scaleMatters</description>
    <label>Opportunity Discard</label>
    <type>Checkbox</type>
</CustomField>