force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_IsClosed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_IsClosed__c</fullName>
    <description>Used to reference the Opportunity for the IsClosed field</description>
    <formula>Opportunity__r.IsClosed</formula>
    <label>Opportunity IsClosed</label>
    <type>Checkbox</type>
</CustomField>