force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_IsWon__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_IsWon__c</fullName>
    <description
  >Used to reference the Opportunity for the IsWon field</description>
    <formula>Opportunity__r.IsWon</formula>
    <label>Opportunity IsWon</label>
    <type>Checkbox</type>
</CustomField>