force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Activity_Date__c</fullName>
    <description>Used in copy Opportunity&apos;s Last Activity as a value to reference.</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    Opportunity__r.LastActivityDate,
    NULL
)</formula>
    <label>Opportunity Last Activity Date</label>
    <type>Date</type>
</CustomField>