force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Modified_Date__c</fullName>
    <description>Used a reference point to see the Last Modified Date to the related Opportunity.</description>
    <formula>Opportunity__r.LastModifiedDate</formula>
    <label>Opportunity Last Modified Date</label>
    <type>DateTime</type>
</CustomField>