force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Source__c</fullName>
    <description>Used to reference Opportunity&apos;s Lead Source value</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    TEXT(Opportunity__r.LeadSource),
    NULL
)</formula>
    <label>Opportunity Lead Source</label>
    <type>Text</type>
</CustomField>