force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Used to copy Opportunity Name should it be displayed within scaleMatters.</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    Opportunity__r.Name,
    NULL
)</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>