force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <description
  >Used to populate the Owner Role of the Opportunity when record is created.</description>
    <label>Opportunity Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>