force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Owner_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_SafeId__c</fullName>
    <description>Used to provide 18 digit ID of Opportunity Owner</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    CASESAFEID(Opportunity__r.OwnerId),
    NULL
)</formula>
    <label>Opportunity Owner SafeId</label>
    <type>Text</type>
</CustomField>