force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Record_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_SafeId__c</fullName>
    <description>Used to provide unique ID for Opportunity + Record</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    Opportunity_SafeId__c &amp;&quot;-&quot;&amp; scaleMatters_Record_SafeId__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity+Record SafeId</label>
    <type>Text</type>
</CustomField>