force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_SafeId__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SafeId__c</fullName>
    <description
  >Used to populated the 18 digit ID vs 15 digit for API access.</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    CASESAFEID(Opportunity__r.Id),
    NULL
)</formula>
    <label>Opportunity SafeId</label>
    <type>Text</type>
</CustomField>