force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Used to copy Opportunity Stage Name</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    TEXT(Opportunity__r.StageName),
    NULL
)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>