force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Sync_to_scaleMatters__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sync_to_scaleMatters__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This is used to dictate if an opportunity should be picked by scaleMatters or not.</description>
    <label>Opportunity Sync to scaleMatters</label>
    <type>Checkbox</type>
</CustomField>