force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Opportunity_Valid__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if Opportunity record should be in scaleMatters</description>
    <label>Opportunity Valid</label>
    <type>Checkbox</type>
</CustomField>