force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Prior_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prior_Stage__c</fullName>
    <description>Used to store the previous stage name value.</description>
    <label>Prior Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>