force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Product_View__c.field-meta.xml
<CustomField>
    <fullName>Product_View__c</fullName>
    <description
  >Operational views segmented by off Product for scaleMatters</description>
    <label>Product View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_View</valueSetName>
    </valueSet>
</CustomField>