force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Product_View_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_View_ID__c</fullName>
    <description>Used the GUID for scaleMatters to run queries off of Product View values</description>
    <label>Product View ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>