force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description
  >Rating is an indication of what the “Person” has actually done. This is a proxy indicator of quality or intent and will help with record prioritization and is used for funnel entry points.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Rating</valueSetName>
    </valueSet>
</CustomField>