force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Record_Closed__c.field-meta.xml
<CustomField>
    <fullName>Record_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Tied to the sales cycle of this record this will determine if the record is closed or not.</description>
    <label>Record Closed</label>
    <type>Checkbox</type>
</CustomField>