force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the record as it pertains to scaleMatters.</description>
    <label>Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>scaleMatters_Leads_Record_Owner_3sx</relationshipName>
    <type>Lookup</type>
</CustomField>