force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Record_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_Role__c</fullName>
    <description
  >Role of sM-Owner of the record as it pertains to scaleMatters.</description>
    <label>Record Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>