force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Released_to_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Released_to_Cadence__c</fullName>
    <description>Date when a Lead is moved into a Cadence.</description>
    <label>Released to Cadence Date</label>
    <type>Date</type>
</CustomField>