force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/S1_Date__c.field-meta.xml
<CustomField>
    <fullName>S1_Date__c</fullName>
    <description>Date when the opportunity moved to Stage 1</description>
    <label>Opp Stage 1 Date</label>
    <type>Date</type>
</CustomField>