force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/S3_Date__c.field-meta.xml
<CustomField>
    <fullName>S3_Date__c</fullName>
    <description>Date when the opportunity moved to Stage 3</description>
    <label>Opp Stage 3 Date</label>
    <type>Date</type>
</CustomField>