force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Sales_Team_View__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_View__c</fullName>
    <description
  >Operational views segmented by off Owner for scaleMatter</description>
    <label>Sales Team View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_View</valueSetName>
    </valueSet>
</CustomField>