force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Sales_Team_View_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_View_ID__c</fullName>
    <description
  >Used the GUID for scaleMatters to run queries off of Team View values</description>
    <label>Sales Team View ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>