force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/Sales_Territory_View_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_View_ID__c</fullName>
    <description
  >Used the GUID for scaleMatters to run queries off of Territory View values</description>
    <label>Sales Territory View ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>