force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/scaleMatters_Currency_1__c.field-meta.xml
<CustomField>
    <fullName>scaleMatters_Currency_1__c</fullName>
    <description>Map this field to the currency field that best represents Monthly Recurring Revenue.</description>
    <label>scaleMatters Currency 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>