force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/scaleMatters_Currency_3__c.field-meta.xml
<CustomField>
    <fullName>scaleMatters_Currency_3__c</fullName>
    <description>Map this field to the currency field that best represents First Year Contract value. Typically this will be Annual Recurring Revenue plus Non-Recurring Revenue for the first year.</description>
    <label>scaleMatters Currency 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>