force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/scaleMatters_Record_SafeId__c.field-meta.xml
<CustomField>
    <fullName>scaleMatters_Record_SafeId__c</fullName>
    <description>Used to set the unique ID to the scaleMatters Record</description>
    <formula>CASESAFEID(Id)</formula>
    <label>scaleMatters Record SafeId</label>
    <type>Text</type>
</CustomField>