force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/User_Source__c.field-meta.xml
<CustomField>
    <fullName>User_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who was the source of working this record originally for scaleMatters</description>
    <label>User Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>scaleMatters_Leads_User_Source_zro</relationshipName>
    <type>Lookup</type>
</CustomField>