force-app/main/default/objects/Funnel_Conversion_Cycle__c/fields/User_Source_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Source_Role__c</fullName>
    <description
  >Role of User who was the source of working this record originally for scaleMatters.</description>
    <label>User Source Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>